# nhlgame

./: .gitignore  Dockerfile  Makefile  README.md  dagster.yaml  definitions.py  docker-compose.yaml  load_to_minio.py  main.py  pyproject.toml
nhlgame_transform/: .user.yml  dbt_project.yml  profiles.yml
nhlgame_transform/models/marts/: dim_players.sql  dim_teams.sql  fct_plays.sql  schema.yml
nhlgame_transform/models/staging/: schema.yml  stg_games.sql  stg_players.sql  stg_players_history.sql  stg_plays.sql  stg_standings.sql  stg_standings_history.sql
scripts/: query.py
